feat: replace keycloak with self-hosted saas auth
